# course_building-aws_agent_core

./: .gitignore  README.md  cleanup.py  kb-test.py  main.py  pyproject.toml  requirements.txt  test.py
.cursor/: mcp.json
.cursor/rules/: python.mdc
data/: products.jsonl
src/: c1_u1_setup_first_call.py  c1_u2_models_and_configs.py  c1_u3_prompt_patterns_structured.py  c1_u4_guardrails.py  c2_u1_s3_vectors_setup.py  c2_u2_embedding_generation.py  c2_u3_knowledge_base_creation.py  c2_u4_rag_querying.py  c3_u1_strands_quickstart.py  c3_u2_tool_calling_agents.py  c3_u3_kb_as_tool.py  c3_u4_mcp.py  c4_u1_agentcore_concepts.md  c4_u2_agentcore_runtime_local.py  c4_u2_agentcore_runtime_local.sh  c4_u3_agentcore_runtime_cloud.py  c4_u3_agentcore_runtime_cloud.sh  c4_u4_agentcore_short_term_memory.py  c4_u4_agentcore_short_term_memory.sh  c4_u5_agentcore_long_term_memory.py  c4_u5_agentcore_long_term_memory.sh  hook-test.py  main.py  memory_hook.py
templates/: BedrockAgentCoreRuntimeExecutionPolicy.json  agent.py  bedrockAgentCore.py  bedrockBasic.py  bedrockGuardrails.py  bedrockKnowledgeBase.py  common.py  enableModel.py  main.py  requirements.txt
templates/policies/: AgentCoreECRCallerAccess.json  BedrockAgentCoreRuntimeExecutionPolicy.json  IAMAccess.json  IAMPassRole.json  S3VectorsFullAccess.json  agentCoreCustomPolicy.json
utils/: README.md  cleanup.py  cleanup_account.py  cleanup_kb_resources.py  invoke.py  list_runtimes.py  run_all_snippets.sh
